# trackers

./: .env.example  .gitignore  README.md  build.sh  docker-compose.test.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  test_auth_flow.py  wsgi.py
.github/workflows/: test.yml
scripts/: README-migration.md  generate-api-key.py  init-db.py  init-db.sh  migrate-tracker-values.py  test-db.sh
static/css/: input.css
static/js/: accessibility.js  charts.js  color-contrast-check.js  dashboard.js  feedback.js  forms.js  jobs.js
templates/: base.html  dashboard.html  debug_dashboard.html  jobs.html  profile.html  test.html
templates/auth/: change_password.html  error.html  login.html  main_login.html  register.html
templates/components/: job_card.html  job_form.html  tracker_card.html  tracker_form.html
tests/: README_integration_tests.md  conftest.py  test_accessibility.py  test_admin_authorization.py  test_admin_system_integration.py  test_admin_web_integration.py  test_api_key_security.py  test_auth_error_handling.py  test_auth_integration_flow.py  test_auth_integration_simple.py  test_authentication_fix.py  test_authentication_ui_improvements.py  test_chart_and_date_fixes.py  test_chart_date_simple.py  test_chart_direction_fix.py  test_cron_validation_fix.py  test_danish_formatting.py  test_db.py  test_dom_xss_fix.py  test_endpoints.py  test_error_handling.py  test_final_job_integration.py  test_final_solution.py  test_generic_job_integration.py  test_generic_job_provider.py  test_google_auth_service.py  test_google_oauth_client.py  test_google_oauth_config.py  test_health_endpoints.py  test_image_proxy.py  test_initialisation.py  test_javascript_fix_verification.py  test_job_config_test_fix.py  test_job_config_testing.py  test_job_config_web_fix.py  test_job_management_ui.py  test_job_routes.py  test_job_scheduler.py  test_job_service.py  test_job_system_integration.py  (+31 more)
trackers/: __init__.py  error_handling.py
trackers/auth/: __init__.py  admin.py  admin_decorators.py  auth_routes.py  auth_service.py  auth_user_integration.py  config.py  context.py  decorators.py  integration.py  (+7 more)
(+50 files in other folders)
